' *******************************************************************************
' Copyright (c) 2026 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' https://www.apache.org/licenses/LICENSE-2.0
'
' SPDX-License-Identifier: Apache-2.0
' *******************************************************************************

@startuml mw_log_shared_memory_reader

package "mw::log" {
  interface "ReaderFactory" as ReaderFactory {
    + Create(const std::int32_t, const pid_t): score::cpp::optional<SharedMemoryReader>
    + Default(): std::unique_ptr<ReaderFactory>
  }

  class "ReaderFactoryImpl" as ReaderFactoryImpl {
    - mman_: score::cpp::pmr::unique_ptr<score::os::Mman>
    - stat_: score::cpp::pmr::unique_ptr<score::os::Stat>
    __
    + Create(const std::int32_t, const pid_t): score::cpp::optional<SharedMemoryReader>
  }

  class "SharedMemoryReader" as SharedMemoryReader {
    - shared_data_: SharedData&
    - unmap_callback_: UnmapCallback
    - linear_reader_: std::optional<LinearReader>
    - acquired_data_: std::optional<ReadAcquireResult>
    - number_of_acquired_bytes_: Length
    - finished_reading_after_detach_: bool
    - buffer_expected_to_read_next_: std::uint32_t
    - is_writer_detached_: bool
    - alternating_read_only_reader_: AlternatingReadOnlyReader
    - DetachWriter(): void
    - IsWriterDetached(): bool
    __
    + SharedMemoryReader(const SharedData&, const score::cpp::span<Byte>,\n  const score::cpp::span<Byte>, UnmapCallback)
    + Read(const TypeRegistrationCallback&, const NewRecordCallback&): std::optional<Length>
    + PeekNumberOfBytesAcquiredInBuffer(const std::uint32_t): std::optional<Length>
    + ReadDetached(const TypeRegistrationCallback&, const NewRecordCallback&): std::optional<Length>
    + GetNumberOfDropsWithBufferFull(): Length
    + GetSizeOfDropsWithBufferFull(): Length
    + GetNumberOfDropsWithInvalidSize(): Length
    + GetRingBufferSizeBytes(): Length
    + GetNumberOfAcquiredBytes(): Length
    + IsBlockReleasedByWriters(): bool
    + NotifyAcquisitionSetReader(const ReadAcquireResult&): std::optional<Length>
  }

  class "SharedData" as SharedData <<Shared Memory>> {
  }

  class "LinearReader" as LinearReader {
    - data_: score::cpp::span<Byte>
    - read_index_: Length
    __
    + LinearReader(const score::cpp::span<Byte>&)
    + Read(): score::cpp::optional<score::cpp::span<Byte>>
  }

  class "score::os::Mman" as Mman {
  }

  class "score::os::Stat" as Stat {
  }

  ' Relationships
  ReaderFactory <|.. ReaderFactoryImpl
  ReaderFactoryImpl ..> SharedMemoryReader : <<creates>>
  ReaderFactoryImpl ..> Mman : <<uses>>
  ReaderFactoryImpl ..> Stat : <<uses>>
  SharedMemoryReader ..> SharedData : <<uses>>
  SharedMemoryReader ..> LinearReader : <<uses>>
}

package "score::platform::datarouter" {
  class "DataRouter" as DataRouter {
    - subscriberDatabase_: SubscriberDatabase
    - databaseCallback_ : WriteSubscriberDatabaseCallback
    __
    + new_source_session(): SessionPtr
    + new_subscriber_session(): SessionPtr
  }

  ' Relationship
  DataRouter ..> ReaderFactory : <<uses>>
}

@enduml
